<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChatApp</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="login_to_an_existing_account">Login to an existing account</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="wrong_password">Password must contain at least one letter, one digit and be no shorter than 5 characters</string>
    <string name="you_cant_register">You can\'t register</string>
    <string name="you_cant_login">You can\'t login</string>
    <string name="logout">Logout</string>
    <string name="chats">CHATS</string>
    <string name="users">USERS</string>
    <string name="type_a_message">Type a message\.\.\.</string>
    <string name="you_cant_send_empty_message">You can\'t send empty message!</string>
    <string name="send_message_button">Send message button</string>
    <string name="profile">PROFILE</string>
    <string name="uploading">Uploading\.\.\.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="search">Search\.\.\.</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset">By clicking RESET, you will receive an email to reset your password</string>
    <string name="check_your_email">Please check your email</string>
</resources>
